--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14",
-    "vue3-touch-events": "^4.1.0"
+    "vue3-touch-events": "^4.1.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
