--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,8 @@ coverage
 *.sw?
 
 # Template file
-./src/lib/templates/DummyTemplate.vue
-./src/lib/templates/DummySetupTemplate.vue
+/src/lib/templates/DummyTemplate.vue
+/src/lib/templates/DummySetupTemplate.vue
 
 # Config
-./src/assets/data/iv-discography.js
+/src/assets/data/iv-discography.js
